<resources>
    <string name="app_name">PaginAzul</string>
    <string name="google_map_api_keyJ">AIzaSyBm6eN8n8A3tzhp-RYKwDZhHw3IfJ36BNA</string>
    <string name="google_map_api_key">AIzaSyDbeg8Dh2fnyHpmMcuL2PtUPN9kqvQFDdY</string>
    <string name="whichservice">Which Service you want?</string>
    <string name="provide_service">Provide Service</string>
    <string name="require_service">Require Service</string>
    <string name="select_service">Select your service</string>
    <string name="delivery_person">Delivery Person</string>
    <string name="professional_worker">Professional Worker</string>
    <string name="prof_worker">Professional\nWorker</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_offer">Cancel Offer</string>
    <string name="signInNow">SignIn</string>
    <string name="signup_now">SignUp</string>
    <string name="submit">Submit</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="select_your_birth_year">Select Your Birth Year</string>
    <string name="email_address">Email Address</string>
    <string name="select_your_Country">Select Your Country</string>
    <string name="select_app_language">Select App Language</string>
    <string name="select_speak_language">Select Speak Language</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_nihar_welcome_to_jokar_family">Hello, Paginazul Welcome to\nPaginazul Family!</string>
    <string name="welcome_to_">Welcome to\n<font color="#0892D0">Paginazul</font> Family!</string>
    <string name="please_enter_one_time_security_code_sent_on_your_register_phone_number">Please enter one time security code sent\non your registered phone number</string>
    <string name="i_didn_t_receive_a_code">I didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="customer_service_admin">Customer Service Admin</string>
    <string name="captain_assistant_admin">Captain Assistant Admin</string>
    <string name="bank_account_admin">Bank Account Admin</string>
    <string name="your_country">Your Country</string>
    <string name="my_caption_profile">My Captain Profile</string>
    <string name="my_rate">My Rate</string>
    <string name="mobile_number_update_successfully">Mobile Number Update\nSuccessfully!</string>
    <string name="skip">Skip</string>
    <string name="i_accept">I accept</string>
    <string name="i_agree">I agree to </string>
    <string name="terms_con">" "<u>Terms &amp; Conditions</u></string>
    <string name="terms_con1">" "Terms &amp; Conditions</string>
    <string name="terms_condition_and">" "<b><u>Terms &amp; Cond.</u></b> and </string>
    <string name="privacy_policy">" "<b><u>Privacy Policy</u></b></string>
    <string name="pricy_policy">Privacy Policy</string>
    <string name="terms_conditions_and_privacy_policy"><![CDATA[Terms & Conditions and Privacy Policy]]></string>
    <string name="more">More</string>
    <string name="manage_delivery_worker">Manage Delivery \nWorker</string>
    <string name="manage_professional_worker">Manage Professional \nWorker</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_order">My Order\'s Dashboard</string>
    <string name="nav_wallet">My wallet/Passbook</string>
    <string name="nav_address">Address History</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_delivry_person">Become Delivery Person</string>
    <string name="nav_profsnal_wrkr">Become Professional Worker</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_arabic">Language</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_share_earn">Share App</string>
    <string name="nav_contact_admin">Contact Admin</string>
    <string name="nav_follow_us">Follow Us</string>
    <string name="order_track">Active Order Tracking</string>
    <string name="add_card">Add Card</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="view_all_offers">View all offers</string>
    <string name="all_offer">All Offers</string>
    <string name="add_money">Add Money</string>
    <string name="pay_your_credit">Pay Your Credit</string>
    <string name="bank_bank_to_bank_transfer">Bank to Bank Transfer(Our Bank A/C)</string>
    <string name="available_balance">Available Balance :</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_new_bank">Add New Bank</string>
    <string name="my_bank_details">My Bank Details</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="holder_account_number">Holder Account Number</string>
    <string name="iban_number">IBAN Number</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="bank_name">Bank Name</string>
    <string name="add_bank">Add Bank</string>
    <string name="my_wallet_history">My Wallet History</string>
    <string name="bank_to_bank_transfer">Bank T0 Bank Transfer(Our Bank A/C)</string>
    <string name="saudi">Saudi</string>
    <string name="our_name">Our Name</string>
    <string name="our_account_number">Our Account Number</string>
    <string name="my_wallet_passbook">My Wallet/Passbook</string>
    <string name="view_orders_details">View Orders Details</string>
    <string name="manage_my_cards_and_my_bank">Manage My Cards</string>
    <string name="pay_your_credit_our_bank_account">Pay Your Credit</string>
    <string name="normal_user">Normal User</string>
    <string name="delivery_worker">Delivery Worker</string>
    <string name="pro_worker">Pro. Worker</string>
    <string name="filter_transaction">Filter Transaction</string>
    <string name="all_added">All Added</string>
    <string name="all_paid">All Paid</string>
    <string name="month_filter">Month Filter</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="money_added_successfully">Money Added Successfully</string>
    <string name="ok">Ok</string>
    <string name="manager_card">Manage Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="total_amount_to_be_added">Total Amount to be added</string>
    <string name="pay_now">Pay Now</string>
    <string name="other_saved_cards">Other Saved Cards</string>
    <string name="professional">Professional</string>
    <string name="delivery_man">Delivery Man</string>
    <string name="total_rating">Total Rating</string>
    <string name="rating_25">(25 Ratings)</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_type_setting_industry">Lorem Ipsum is simply dummy text of the printing and type setting industry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_ID_txt">You must upload one personal image and Two government Official ID. (National ID, Passport ID, Driving License)</string>
    <string name="upload_verified_icon"><u>Upload your own image</u></string>
    <string name="order_id">Order ID:\u00A0</string>
    <string name="profilr_name">User Name</string>
    <string name="rating_view_all">(0 Ratings View all)</string>
    <string name="optional">Optional</string>
    <string name="my_location">My\nLocation</string>
    <string name="your_location">Your\nLocation</string>
    <string name="order_detail">Order Details</string>
    <string name="minimum_offer">Offer amount in SAR</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="enter_message_if_any">Add message </string>
    <string name="add_approx_time_for_complete_work">Add Approx. time to complete job</string>
    <string name="tap_plumber_any_kind_of_them">Tap Plumber,any kind of tap</string>
    <string name="professional_tap_plumber">Professional Tap Plumber</string>
    <string name="lorem_ipsum_is_simply">Lorem Ipsum is simply dummy text of the printing and type setting industry.Lorem Ipsum has been the the industry standerd dummy text ever since the 1500s</string>
    <string name="my_profile">My Profile</string>
    <string name="caption_profile">My Captain Profile</string>
    <string name="change_language">Change Language</string>
    <string name="manage_address">Edit Address</string>
    <string-array name="contact_admin">
        <item>Select Reason</item>
        <item>Want to submit complain</item>
        <item>Want to provide feedback</item>
        <item>Other</item>
    </string-array>
    <string name="my_order_dashboard">My Order\'s Dashboard</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="become_delivery_person">Become A Delivery Person</string>
    <string name="become_prfslnal_wrkr">Become Professional Worker</string>
    <string name="dashboard_normal_user">I\'m Normal User</string>
    <string name="dashboard_delivery_worker">I\'m Delivery Worker</string>
    <string name="dashboard_professional_worker">I\'m Professional Worker</string>
    <string name="item_name1">Item Name 1-15.00</string>
    <string name="item_name2">Item Name 2-15.00</string>
    <string name="offer_amount">Offer Amount</string>
    <string name="msg">Message</string>
    <string name="prff_msg">Professional Message</string>
    <string name="work_completion_time">Delivery Time</string>
    <string name="work_completion_time1">Work Completion Time</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="delivery_offer">Delivery Offer</string>
    <string name="delivery_offer1">Delivery Charge Offer</string>
    <string name="tax">Tax 5%</string>
    <string name="total">Total</string>
    <string name="work_done">Work Done</string>
    <string name="done">Done</string>
    <string name="make_new_offer">Make New \nOffer</string>
    <string name="report_cancel_order">Cancel Order</string>
    <string name="cancellation">Cancellation</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="normal_user_notification">Normal User Notification</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_and_condition">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="great_dialog_txt_normal">Your order has started! We wish you the best experience, However, if anything happens, remember that you have \"change courier\" check the menu below.</string>
    <string name="title">Title</string>
    <string name="landmark">Landmark</string>
    <string name="your_address">Your Address…</string>
    <string name="share_image">Share Image</string>
    <string name="share_location">Share Location</string>
    <string name="change_professional_captain">Change Professional Captain</string>
    <string name="great">Great!</string>
    <string name="paginazul_collects_uses_maintains_and_discloses_information_collected_from_users_each_a_user_of_the_paginazul_com_website_site">Paginazul collects, uses, maintains information collected from users (each, a User).</string>
    <string name="note">Note</string>
    <string name="validity_date">Validity Date</string>
    <string name="discounted_price">Discounted Price</string>
    <string name="high_to_low_price">High to Low price</string>
    <string name="low_to_high_price">Low to High price</string>
    <string name="apply">Apply</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
</resources>