<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_myorder"
            android:icon="@drawable/my_orders"
            android:title="@string/nav_my_order" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/my_wallet"
            android:title="@string/nav_wallet" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/nav_address" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>