<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="vertical">



        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_share_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_light_grey_white_layout"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:text="@string/share_image" />


        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_share_loc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_light_grey_white_layout"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:text="@string/share_location" />

        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_admin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_light_grey_white_layout"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:text="@string/contact_admin" />

        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_del_cap"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_light_grey_white_layout"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:text="@string/change_professional_captain" />

        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_cancel_Order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_light_grey_white_layout"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:text="@string/cancel_order" />

        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_sign_in"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white" />


    </LinearLayout>


</RelativeLayout>