<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="vertical">

        <com.pagin.azul.view.RobotoSemiBoldTextView
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:gravity="center"
            android:id="@+id/tom_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/great"/>


        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tvMsg"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/great_dialog_txt_normal"
            />


        <RelativeLayout
            android:layout_marginTop="@dimen/dp_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <com.pagin.azul.view.RobotoRegularButton
                android:id="@+id/btn_ok"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>




</RelativeLayout>