<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlackTransparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_menu_item_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/discounted_price"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tv_menu_item_heading2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/validity_date"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgPrice" />

        <RadioGroup
            android:id="@+id/rgPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu_item_heading">

            <RadioButton
                android:id="@+id/rbHigh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@drawable/bg_radio_filter_btn"
                android:paddingLeft="10dp"
                android:text="@string/high_to_low_price" />

            <RadioButton
                android:id="@+id/rbLow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:button="@drawable/bg_radio_filter_btn"
                android:paddingLeft="10dp"
                android:text="@string/low_to_high_price" />


        </RadioGroup>

        <com.pagin.azul.view.RobotoRegularTextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_light_radius_white"
            android:drawableEnd="@drawable/calen"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_12"
            android:hint="@string/dd_mm_yyyy"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu_item_heading2" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_sign_in"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rvTypeCategrory"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>